--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/jwt": "^1.1.0",
+    "@elysiajs/swagger": "^1.1.0",
+    "@grotto/logysia": "^0.1.4",
+    "elysia": "latest",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
     "bun-types": "latest"
