added test amd logger

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/eden": "^1.1.2",
     "@elysiajs/jwt": "^1.1.0",
     "@elysiajs/swagger": "^1.1.0",
     "@grotto/logysia": "^0.1.4",
     "elysia": "latest",
+    "elysia-helmet": "^2.0.0",
     "mongoose": "^8.5.2"
   },
   "devDependencies": {
