--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@elysiajs/jwt": "^1.1.0",
     "@elysiajs/swagger": "^1.1.0",
     "@grotto/logysia": "^0.1.4",
+    "argon2": "^0.40.3",
     "elysia": "latest",
     "elysia-helmet": "^2.0.0",
     "mongoose": "^8.5.2"
